New files added

--- a/Test-Management-System/Styles/login.css
+++ b/Test-Management-System/Styles/login.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("Images/Chitkara_University_pic.jpg");
+    background-image: url("../Images/Chitkara_University_pic.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
