--- a/Test-Management-System/Styles/instructions.css
+++ b/Test-Management-System/Styles/instructions.css
@@ -36,23 +36,29 @@ ul {
     list-style-type: disc;
 }
 
-.next-button {
-    background-color: #04AA6D;
-    color: white;
-}
+.container {
+    height: 50px;
+    position: relative;
+  }
 
-.Button {
+button {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+    padding: 8px 16px;
     text-align: center;
-}
-
-a {
     text-decoration: none;
     display: inline-block;
-    padding: 8px 16px;
-    align-items: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
 }
 
-a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+button:hover {
+    background-color: #555555;
+    color: white;
+}
