--- a/Styles/main.css
+++ b/Styles/main.css
@@ -78,3 +78,53 @@ footer {
     text-align: center;
     font-family: 'Poppins', sans-serif;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    header {
+        width: 100%;
+    }
+    .content-cards {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .card-images {
+        height: 100px;
+        padding: 10px;
+    }
+    footer {
+        padding: 15px 0;
+        text-align: center;
+        font-family: 'Poppins', sans-serif;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    header {
+        width: 100%;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    header {
+        width: 100%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    header {
+        width: 100%;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    header {
+        width: 100%;
+    }
+}
