--- a/Styles/signup.css
+++ b/Styles/signup.css
@@ -8,10 +8,10 @@ body {
 }
 .box {
     background-color: white;
-    margin-top: 13%;
+    margin-top: 11%;
     margin-left: 40%;
     margin-right: 40%;
-    height: 280px;
+    height: 360px;
 }
 .heading {
     font-size: 20px;
@@ -46,11 +46,11 @@ p {
     margin-top: 5px;
 }
 
-.signup-text {
+.login-text {
     text-decoration: none;
 }
 
-.signup-text:hover {
+.login-text:hover {
     text-decoration: underline;
     cursor: pointer;
 }
